# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  rust-toolchain  shell.nix  spec.yaml  sqlx-data.json
.direnv/: nix-profile-pre473491.96ba1c52e54  nix-profile-pre473491.96ba1c52e54.rc
configuration/: base.yaml  production.yaml
migrations/: 20230530234546_create_subscriptions_token_table.sql  20230706180240_seed_user.sql  20230724174134_enhance_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: mod.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
